# zap2xml-manager

./: .gitignore  install.sh  pyproject.toml  requirements.txt  zap2xml-manager
zap2xml_manager/: __init__.py  __main__.py  cli.py  config.py  core.py  espn.py  scheduler.py  server.py  tui.py  zap2it.py
