[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zap2xml-manager"
version = "1.0.0"
description = "XMLTV EPG Manager - Fetch TV listings from Zap2it/Gracenote and ESPN+"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "zap2xml-manager contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
keywords = ["xmltv", "epg", "tv", "guide", "zap2it", "espn"]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zap2xml-manager = "zap2xml_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/zap2xml/zap2xml-manager"
Repository = "https://github.com/zap2xml/zap2xml-manager"

[tool.setuptools.packages.find]
where = ["."]
include = ["zap2xml_manager*"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py39"
